packages/typ/tests/fixtures/diagnostics/0092_core_if_condition_non_bool_08.ml
let _ = if 7 then 8 else 9
